{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "6ac10a22-eb66-4817-977c-7df08d1d3e6d",
            "actions": [
                {
                    "name": "TouchDragLook",
                    "type": "PassThrough",
                    "id": "a08754a1-3e3c-4a25-ba1b-4b2e50362070",
                    "expectedControlType": "Vector2",
                    "processors": "LookBtn",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDragLookStick",
                    "type": "PassThrough",
                    "id": "03a6fef5-ce68-4867-ada8-e571bd7c0895",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NoAction",
                    "type": "Value",
                    "id": "1ccc01d9-ff3f-4f0a-993e-afa6c3f13c23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ba147d4d-ee06-4e8d-a7cc-8bc5e2ae98cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "86d58439-d1db-4a19-97e2-7b7255c07f6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldFire",
                    "type": "Button",
                    "id": "54e2c43e-65a3-44d9-8d6b-efe901630d0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "d612c2f7-28a9-4f60-b33b-fe1aa928320c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "bd8721f6-0ec1-45fa-98ed-13eb71ea3e93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f48435c4-cc67-4033-bd02-09549af2fd0a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "16997442-c809-41fa-baf9-72d2272665d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "794ae715-37d1-48bd-a4c2-3f3aa27596f5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ca649599-dcb3-421e-9976-c46ce1109309",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5dae671b-480f-49a2-a72f-3d158384d286",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d402f5cf-2d21-417e-9034-10d83c368a90",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea5711b2-5f48-45c7-a804-770561d4e0bc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77ebf645-27aa-4b35-9c07-d5b83b13e52b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "645fb17f-4ddb-44a6-8d7d-2b6e6c470298",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00e0e8af-dc3a-428d-8f9d-459f6fe00707",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDragLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fce3f706-44f2-40b4-9a5b-ecaa2cd4c7b1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDragLookStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a048115-26be-425a-82cc-7bc118d78100",
                    "path": "<HID>",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63412437-ad6c-4182-a3ca-857404614866",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}